--- a/torneo/templates/torneo/torneos_sin_participantes.html
+++ b/torneo/templates/torneo/torneos_sin_participantes.html
@@ -8,7 +8,7 @@
     <h1>Torneos sin Participantes</h1>
         <ul>
             {% for torneo in torneos %}
-                <li>{{ torneo.nombre }} - {{ torneo.juego.nombre }}</li>
+                <li>{{ torneo.nombre }} </li>
             {% endfor %}
         </ul>
 </body>
