--- a/torneo/templates/torneo/lista_usuarios_primeros.html
+++ b/torneo/templates/torneo/lista_usuarios_primeros.html
@@ -10,7 +10,7 @@
     <ul>
         {% for usuario in usuarios_primeros %}
             <li>
-                {{ usuario.nombre }} - Correo: {{ usuario.correo }}
+                {{ usuario.nombre }} - Correo: {{ usuario.correo }} {{usuario.clave_de_acceso}} - {{usuario.fecha_registro}}
                     - Ranking: {{ usuario.jugador.ranking }} - Puntos: {{ usuario.jugador.puntos }} - Torneos Ganados: {{ usuario.jugador.torneos_ganados }}
             </li>
         {% endfor %}
