--- a/torneo/templates/index.html
+++ b/torneo/templates/index.html
@@ -12,11 +12,12 @@
             <li><a href="{% url 'lista_participantes' %}">Ver Lista de Participantes</a></li>
             <li><a href="{% url 'lista_usuarios_primeros' %}">Ver Clasificación de Usuarios</a></li>
             <li><a href="{% url 'participantes_con_puntos_y_ganados' %}">Participantes con Puntos y Torneos Ganados</a></li>
-            <li><a href="{% url 'torneos_sin_participantes' %}">Torneos sin participantes</a></li>
             <li><a href="{% url 'consolas_participantes' 5 %}">Total de Consolas por el participante 5</a></li>
             <li><a href="{% url 'estado_torneojuego' %}">Estado de Torneos de Juegos</a></li>
             <li><a href="{% url 'primeros_torneos' %}">Primeros torneos</a></li>
-
+            <li><a href="{% url 'usuarios_noclasificados' %}">Usuarios No Clasificados</a></li> 
+            <li><a href="{% url 'participantes_por_torneo_y_estado' 1 'activo' %}">Participantes del Torneo 1 con Estado Activo</a></li>
+            <li><a href="{% url 'espectadores_por_nombre' 'C' %}">Espectadores que comienzan con "C"</a></li>
         </ul>
     </body>
     </html>
