--- a/torneo/templates/torneo/lista_torneo.html
+++ b/torneo/templates/torneo/lista_torneo.html
@@ -6,31 +6,30 @@
 </head>
 <body>
     <h1>Lista de Torneos</h1>
-    
-    <ul>
-        {% for torneo in torneos %}
-            <li>
-                <h2>{{ torneo.nombre }}</h2>
-                <p>{{ torneo.descripcion }}</p>
-                <p>{{ torneo.categoria }}</p>
-                <p>{{ torneo.duracion }}</p>
-                <p>{{ torneo.fecha_inicio }}</p>
 
+    <div>
+        {% for torneo in torneos %}
+            <div>
+                <h2>{{ torneo.nombre }}</h2>
+                <p>Descripción: {{ torneo.descripcion }}</p>
+                <p>Categoría: {{ torneo.categoria }}</p>
+                <p>Duración: {{ torneo.duracion }}</p>
+                <p>Fecha de Inicio: {{ torneo.fecha_inicio }}</p>
                 <h3>Participantes:</h3>
                 <ul>
-                    {% for torneo_participante in torneo.participantes.all %}
+                    {% for participante in torneo.participantes.all %}
                         <li>
-                            {{ torneo_participante.participante.usuario.nombre }} - 
-                            Puntos: {{ torneo_participante.puntos_obtenidos }} - 
-                            Posición: {{ torneo_participante.posicion_final }}
-                            
+                            <strong>Usuario:</strong> {{ participante.usuario.nombre }}<br>
+                            <strong>Correo:</strong> {{ participante.usuario.correo }}<br>
+                            <strong>Puntos Obtenidos:</strong> {{ participante.puntos_obtenidos }}<br>
+                            <strong>Posición Final:</strong> {{ participante.posicion_final }}<br>
+                            <strong>Fecha de Inscripción:</strong> {{ participante.fecha_inscripcion }}<br>
+                            <strong>Tiempo Jugado:</strong> {{ participante.tiempo_jugado }}<br>
                         </li>
-                        <li>fecha_inscripcion: {{torneo_participante.fecha_inscripcion}} </li>
-                        <li>tiempo_jugado: {{torneo_participante.tiempo_jugado}} </li>
                     {% endfor %}
                 </ul>
-            </li>
+            </div>
         {% endfor %}
-    </ul>
+    </div>
 </body>
 </html>
