--- a/torneo/templates/torneo/usuarios_noclasificados.html
+++ b/torneo/templates/torneo/usuarios_noclasificados.html
@@ -6,11 +6,15 @@
 </head>
 <body>
     <h1>Usuarios No Clasificados</h1>
+    
     <ul>
         {% for usuario in noclasificados %}
-            <li>{{ usuario.nombre }} ({{ usuario.correo }}) {{usuario.clave_de_acceso}} {{usuario.fecha_registro}}</li>
+            <li>
+                <strong>Nombre:</strong> {{ usuario.nombre }} <br>
+                <strong>Correo:</strong> {{ usuario.correo }} <br>
+                <strong>Fecha de Registro:</strong> {{ usuario.fecha_registro }} <br>
+            </li>
         {% endfor %}
     </ul>
-
 </body>
 </html>
