--- a/torneo/templates/torneo/consolas_participantes.html
+++ b/torneo/templates/torneo/consolas_participantes.html
@@ -1,17 +1,15 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>Total de Consolas por Participantes</title>
-<body>
-    {% for participante in participantes %}
-  <p>{{ participante.usuario.nombre }} tiene {{ participante.num_consolas }} consolas asociadas.</p>
-  {% if participante.num_consolas == 0 %}
-    <p>No hay consolas asociadas a este participante.</p>
-  {% endif %}
-{% empty %}
-  <p>No se encontraron participantes con este ID.</p>
-{% endfor %}
+{% extends 'torneo/base.html' %}
 
-</body>
-</html>
+{% block title %}Total de Consolas por Participantes{% endblock %}
+
+{% block content %}
+    <h1>Total de Consolas por Participantes</h1>
+    {% for participante in participantes %}
+        <p>{{ participante.usuario.nombre }} tiene {{ participante.num_consolas }} consolas asociadas.</p>
+        {% if participante.num_consolas == 0 %}
+            <p>No hay consolas asociadas a este participante.</p>
+        {% endif %}
+    {% empty %}
+        <p>No se encontraron participantes con este ID.</p>
+    {% endfor %}
+{% endblock %}
