--- a/torneo/templates/torneo/participantes_por_torneo_y_estado.html
+++ b/torneo/templates/torneo/participantes_por_torneo_y_estado.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>Participantes por Torneo y Estado</title>
-</head>
-<body>
+{% extends 'torneo/base.html' %}
+
+{% block title %}Participantes por Torneo y Estado{% endblock %}
+
+{% block content %}
     <h1>Participantes del Torneo</h1>
 
     <ul>
@@ -12,15 +10,14 @@
             <li>
                 {{ participante.usuario.nombre }} - 
                 {{ participante.usuario.correo }} - 
-                {{participante.usuario.clave_de_acceso}} -
-                {{participante.usuario.fehca_registro}} -
+                {{ participante.usuario.clave_de_acceso }} - 
+                {{ participante.usuario.fecha_registro }} - 
                 Puntos: {{ participante.puntos_obtenidos }} - 
-                Inscrito el: {{ participante.fecha_inscripcion }}
-                {{participante.tiempo_jugado}}
+                Inscrito el: {{ participante.fecha_inscripcion }}<br>
+                Tiempo Jugado: {{ participante.tiempo_jugado }}
             </li>
         {% endfor %}
     </ul>
     
     <p>Total de participantes: {{ participantes.count }}</p> <!-- Esto es para que te cuente los participantes -->
-</body>
-</html>
+{% endblock %}
