--- a/torneo/templates/torneo/lista_torneo.html
+++ b/torneo/templates/torneo/lista_torneo.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>Lista de Torneos</title>
-</head>
-<body>
+{% extends 'torneo/base.html' %}
+
+{% block title %}Lista de Torneos{% endblock %}
+
+{% block content %}
     <h1>Lista de Torneos</h1>
 
     <div>
@@ -31,5 +29,4 @@
             </div>
         {% endfor %}
     </div>
-</body>
-</html>
+{% endblock %}
