--- a/torneo/templates/torneo/usuarios_noclasificados.html
+++ b/torneo/templates/torneo/usuarios_noclasificados.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>Usuarios No Clasificados</title>
-</head>
-<body>
+{% extends 'torneo/base.html' %}
+
+{% block title %}Usuarios No Clasificados{% endblock %}
+
+{% block content %}
     <h1>Usuarios No Clasificados</h1>
     
     <ul>
@@ -16,5 +14,4 @@
             </li>
         {% endfor %}
     </ul>
-</body>
-</html>
+{% endblock %}
