--- a/torneo/templates/torneo/errores/400.html
+++ b/torneo/templates/torneo/errores/400.html
@@ -1,12 +1,9 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>Error 400 - Solicitud Incorrecta</title>
-</head>
-<body>
+{% extends 'torneo/base.html' %}
+
+{% block title %}Error 400 - Solicitud Incorrecta{% endblock %}
+
+{% block content %}
     <h1>Error 400</h1>
     <p>La solicitud que realizaste no es válida.</p>
     <p>Verifica la URL o intenta de nuevo más tarde.</p>
-</body>
-</html>
+{% endblock %}
