--- a/torneo/templates/torneo/errores/403.html
+++ b/torneo/templates/torneo/errores/403.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>Error 403 - Acceso Denegado</title>
-</head>
-<body>
+{% extends 'torneo/base.html' %}
+
+{% block title %}Error 403 - Acceso Denegado{% endblock %}
+
+{% block content %}
     <h1>Error 403 - Acceso Denegado</h1>
     <p>No tienes permisos para acceder a esta página.</p>
-</body>
-</html>
+{% endblock %}
