--- a/torneo/templates/torneo/errores/404.html
+++ b/torneo/templates/torneo/errores/404.html
@@ -1,13 +1,9 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página no encontrada</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block title %}Página no encontrada{% endblock %}
+
+{% block content %}
     <h1>Error 404</h1>
     <p>Lo sentimos, la página que buscas no se encuentra disponible.</p>
     <p><a href="{% url 'index' %}">Volver a la página principal</a></p>
-</body>
-</html>
+{% endblock %}
