--- a/torneo/templates/torneo/errores/500.html
+++ b/torneo/templates/torneo/errores/500.html
@@ -1,12 +1,9 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>Error 500 - Error Interno del Servidor</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block title %}Error 500 - Error Interno del Servidor{% endblock %}
+
+{% block content %}
     <h1>Error 500 - Error Interno del Servidor</h1>
     <p>Lo sentimos, pero se ha producido un error en el servidor.</p>
     <p>Intenta recargar la página o vuelve más tarde.</p>
-</body>
-</html>
+{% endblock %}
