--- a/torneo/static/css/styles.css
+++ b/torneo/static/css/styles.css
@@ -8,7 +8,7 @@ body {
     line-height: 1.6;
 }
 
-/* Navigation Menu */
+
 nav {
     background-color: #2c3e50;
     padding: 1em;
@@ -38,7 +38,7 @@ nav ul li a:hover {
     color: #f39c12;
 }
 
-/* Header */
+
 header {
     text-align: center;
     background: #3498db;
@@ -61,7 +61,7 @@ img{
     height: 100%;
 }
 
-/* Main Content */
+
 main {
     max-width: 1200px;
     margin: 0 auto;
@@ -71,7 +71,7 @@ main {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-/* Links */
+
 a {
     color: #3498db;
     text-decoration: none;
@@ -81,21 +81,10 @@ a:hover {
     color: #2980b9;
 }
 
-/* Footer */
-footer {
-    background: #2c3e50;
-    color: #ecf0f1;
-    text-align: center;
-    padding: 1em 0;
-    margin-top: 20px;
-}
 
-footer p {
-    margin: 0;
-    font-size: 0.9em;
-}
 
-/* Utility Classes */
+
+
 ul {
     padding: 0;
     margin: 0;
@@ -121,4 +110,18 @@ h2 {
 
 .btn:hover {
     background: #2980b9;
+}
+
+
+footer {
+    background: #ca3232;
+    color: #ecf0f1;
+    text-align: center;
+    padding: 1em 0;
+    margin-top: 20px;
+}
+
+footer p {
+    margin: 0;
+    font-size: 0.9em;
 }
